--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <input type="text" id="username" name="username" placeholder="Email or number" required> 
     <br> 
     <input type="password" id="password" name="password" placeholder="Password" required> 
-    <br> <button type="submit">Submit</button> 
+    <br> <button type="submit">login</button> 
    </form> 
   </div> 
   <script>
